# QT

QT4/untitled1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT5/untitled1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
QT6/: CMakeLists.txt  ExampleRace.h  mainwindow.cpp  mainwindow.h
QT7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
